--- a/index.html
+++ b/index.html
@@ -1431,6 +1431,7 @@ video{
               <button class="btn btn-primary">SignIn </button>
 </a>
 <br>
+	<br>
  	<a href="signup" >
               <button class="btn btn-secondary">SignUp </button>
               </a>
@@ -1453,7 +1454,7 @@ video{
           <div class="section-header-wrapper">
 
             <h2 class="h2 section-title">Video ad </h2>
-<a href='https://apk.e-droid.net/apk/app2135083-5sw3px.apk?v=3' >
+<a href='beweble-apk' >
             <button class="btn btn-primary">Beweble Apk</button>
 </a>
           </div>
