--- a/main.html
+++ b/main.html
@@ -125,10 +125,10 @@
 	width: 100%;
 	height: 100vh;
 	background: #121212
-	url('https://b.top4top.io/p_2640wyx7v1.gif' )
+	url('https://i.top4top.io/p_2640191wt1.gif' )
 	 no-repeat center center;	
 	z-index: 99999;
-	background-size:100%;
+	background-size:100px;
 }
 
 a { text-decoration: none; }
