--- a/main.html
+++ b/main.html
@@ -128,7 +128,7 @@
 	url('https://i.top4top.io/p_2640191wt1.gif' )
 	 no-repeat center center;	
 	z-index: 99999;
-	background-size:100px;
+	background-size:100%;
 }
 
 a { text-decoration: none; }
