--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>home</title>
-   <body onload="myFunction()">
-<div id="loading"></div>
-
+   <body>
 <style>
 /*-----------------------------------*\ 
  * #style.css
@@ -87,16 +85,7 @@
   padding: 0;
   box-sizing: border-box;
 }
-#loading{
-	position: fixed;
-	width: 100%;
-	height: 100vh;
-	background: #121212
-	url('https://i.top4top.io/p_2640191wt1.gif' )
-	 no-repeat center center;	
-	z-index: 99999;
-	background-size:100%;
-}
+
 
 
 a { text-decoration: none; }
@@ -1906,20 +1895,6 @@ video{
     <ion-icon name="arrow-up-outline"></ion-icon>
   </a>
 
-
-<script>
-		// $(document).ready(function(){
-			// 	$('div#loading').removeAttr('id');
-		// });
-		var preloader = document.getElementById("loading");
-		// window.addEventListener('load', function(){
-		// 	preloader.style.display = 'none';
-		// 	})
-
-		function myFunction(){
-			preloader.style.display = 'none';
-		};
-	</script>
 
 
   <!-- 
