--- a/note.html
+++ b/note.html
@@ -152,21 +152,19 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-analytics.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-database.js"></script>
- 
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
+
 <script>
-var firebaseConfig = {
- apiKey: "AIzaSyAFPHSQdRugV6ngWGtPuUfSzBhS94D30hU",
- authDomain: "reda-7d506.firebaseapp.com",
- projectId: "reda-7d506", 
- storageBucket: "reda-7d506.appspot.com",
- messagingSenderId: "637395019512", 
- appId: "1:637395019512:web:1c7834e529eb90dcaf3d0d",
- measurementId: "G-Q7H13D1YFC" };
- 
+
+var firebaseConfig = { apiKey: "AIzaSyAFPHSQdRugV6ngWGtPuUfSzBhS94D30hU", 
+authDomain: "reda-7d506.firebaseapp.com", 
+projectId: "reda-7d506", storageBucket: "reda-7d506.appspot.com", 
+messagingSenderId: "637395019512", 
+appId: "1:637395019512:web:1c7834e529eb90dcaf3d0d", 
+measurementId: "G-Q7H13D1YFC" }; 
+
 // Initialize Firebase
 firebase.initializeApp(firebaseConfig);
 firebase.analytics();
