--- a/note.html
+++ b/note.html
@@ -4,15 +4,72 @@
 <head>
 	<title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="note.css">
-	<link rel="stylesheet" type="text/css" href="login.html">
-	<link rel="stylesheet" type="text/css" href="signup.html">
+	
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://cdn.ckeditor.com/4.16.1/standard-all/ckeditor.js"></script>
-  
+  <style>
+.mainbody{
+	background-image: url(https://www.washingtonpost.com/resizer/NcD-eYjEnEEcTDnS1GZelQtAK5c=/1484x0/arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/YBDXXTEX7JFCJP4JGBPBCIVLDU.jpg);
+	vertical-align: center;
+	align-content: center;
+	background-size: cover;
+}
+
+#addTxt{
+	border-radius: 10px;
+
+}
+#nothing{
+	text-align: center;
+}
+.mainbody2{
+	background-color: #D3D3D3;
+}
+.container my-3{
+	background-color: grey;
+}
+#Heading{
+	text-align: center;
+}
+#jumbo
+{
+	background-color:  rgb(255, 204, 255);
+	padding: auto;
+	align-content: center;
+	vertical-align: center;
+	margin: auto;
+	margin-top: 100px;
+	height: 500px;
+	width: 450px;
+}
+
+#special
+{
+	background-color:  rgb(255, 204, 255);
+	padding: auto;
+	align-content: center;
+	vertical-align: center;
+	margin: auto;
+	margin-top: 100px;
+	height: 500px;
+	width: 450px;
+}
+
+
+.display-4{
+	text-align: center;
+}
+.card-footer{
+	font-size:medium;
+	font-style: italic;
+	display: block;
+	text-align: right;
+    
+}
+</style>
 </head>
 <body class="mainbody2">
 
