--- a/note.html
+++ b/note.html
@@ -147,6 +147,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-database.js"></script>
+    <script src="note.js"></script>
     <script>
 var firebaseConfig = {
     apiKey: "AIzaSyAFPHSQdRugV6ngWGtPuUfSzBhS94D30hU",
