--- a/note.html
+++ b/note.html
@@ -147,15 +147,15 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-database.js"></script>
-    <script src="note.js"></script>
+    <script src=""></script>
     <script>
 var firebaseConfig = {
-    apiKey: "AIzaSyAFPHSQdRugV6ngWGtPuUfSzBhS94D30hU",
-    authDomain: "reda-7d506.firebaseapp.com",
-    projectId: "reda-7d506",
-    storageBucket: "reda-7d506.appspot.com",
-    messagingSenderId: "637395019512",
-    appId: "1:637395019512:web:1c7834e529eb90dcaf3d0d"
+    apiKey: "AIzaSyBFkmspKoi-RDOMZfL-k9__70YIaS7vLn0",
+    authDomain: "notedemo-a1e15.firebaseapp.com",
+    projectId: "notedemo-a1e15",
+    storageBucket: "notedemo-a1e15.appspot.com",
+    messagingSenderId: "641128485554",
+    appId: "1:641128485554:web:db3794ada96d08b1ea2fab"
 };
 // Initialize Firebase
 firebase.initializeApp(firebaseConfig);
@@ -431,7 +431,5 @@ TODO: Further Features:
 4. Sync and host to web server
 */
 </script>
-    
 </body>
-
 </html>
