--- a/note.html
+++ b/note.html
@@ -150,12 +150,12 @@
     <script src=""></script>
     <script>
 var firebaseConfig = {
-    apiKey: "AIzaSyBFkmspKoi-RDOMZfL-k9__70YIaS7vLn0",
-    authDomain: "notedemo-a1e15.firebaseapp.com",
-    projectId: "notedemo-a1e15",
-    storageBucket: "notedemo-a1e15.appspot.com",
-    messagingSenderId: "641128485554",
-    appId: "1:641128485554:web:db3794ada96d08b1ea2fab"
+    apiKey: "AIzaSyBmQebUmPyy79z51kb6YKkAurZ11yehXIk",
+  authDomain: "vip-page.firebaseapp.com",
+  projectId: "vip-page",
+  storageBucket: "vip-page.appspot.com",
+  messagingSenderId: "809627494181",
+  appId: "1:809627494181:web:0df989d623d1cb6e119ccc"
 };
 // Initialize Firebase
 firebase.initializeApp(firebaseConfig);
