--- a/note.html
+++ b/note.html
@@ -150,12 +150,14 @@
     <script src=""></script>
     <script>
 var firebaseConfig = {
-    apiKey: "AIzaSyBmQebUmPyy79z51kb6YKkAurZ11yehXIk",
-  authDomain: "vip-page.firebaseapp.com",
-  projectId: "vip-page",
-  storageBucket: "vip-page.appspot.com",
-  messagingSenderId: "809627494181",
-  appId: "1:809627494181:web:0df989d623d1cb6e119ccc"
+    apiKey: "AIzaSyDGsE2tbRctFRf22QMrFrGfrDRvX2Hj-LA",
+  authDomain: "testys-56abf.firebaseapp.com",
+  databaseURL: "https://testys-56abf-default-rtdb.firebaseio.com",
+  projectId: "testys-56abf",
+  storageBucket: "testys-56abf.appspot.com",
+  messagingSenderId: "691391330319",
+  appId: "1:691391330319:web:7c2037f0c4bd3069fbcb7a",
+  measurementId: "G-BZ8ZRQNKWZ"
 };
 // Initialize Firebase
 firebase.initializeApp(firebaseConfig);
