--- a/index.html
+++ b/index.html
@@ -1799,7 +1799,7 @@ video{
         <div class="footer-brand">
 
           <a href="#top" class="logo">
-            <img src="https://i.top4top.io/p_2582hbajv1.png" alt="NAFT logo">
+            <img src="https://f.top4top.io/s_2912xwwoq0.png" alt="NAFT logo">
           </a>
 
           <p class="footer-brand-text">
@@ -1869,7 +1869,7 @@ video{
       <div class="container">
 
         <p class="copyright">
-          &copy; 2023 <a href="https://beweble.cf">Beweble</a> all rights reserved
+          &copy; 2024 <a href="https://beweble.cf">Beweble</a> all rights reserved
         </p>
 
         <div class="footer-bottom-links">
