--- a/beweble.html
+++ b/beweble.html
@@ -321,8 +321,8 @@ a {
 
   </section>
   <section class="grid">
-    <a href="YmMyM" class="grid__photo" style="background-image: url('https://k.top4top.io/p_2622hzt4p1.jpg' );"></a>
-    <a href="A2M2Y" class="grid__photo" style="background-image: url('https://k.top4top.io/p_2588z1nkk1.jpg');"></a>
+    <a href="YmMyM" class="grid__photo" style="background-image: url('https://j.top4top.io/p_2622jfp3a1.jpg' );"></a>
+    <a href="A2M2Y" class="grid__photo" style="background-image: url('https://j.top4top.io/p_2622jfp3a1.jpg');"></a>
     <a href="CfXDg" class="grid__photo" style="background-image: url('https://j.top4top.io/p_2622jfp3a1.jpg');"></a>
 
   </section>
