--- a/beweble.html
+++ b/beweble.html
@@ -262,7 +262,7 @@ a {
   </section>
   <section class="stats">
   	   	<a href="story" > 
-    <div class="stats__img-holder" style="background-image: url('https://i.top4top.io/p_2582hbajv1.png');">      
+    <div class="stats__img-holder" style="background-image: url('https://f.top4top.io/p_2912xwwoq0.png');">      
     </div>
     </a>
     <div class="stats__data">
