--- a/index.html
+++ b/index.html
@@ -1457,7 +1457,7 @@ video{
                 <figure class="product-banner">
 
       <video  id="myVideo" controls="controls">
-      	        <source  src="https://d.top4top.io/m_2384curb01.mp4" type="video/mp4">
+      	        <source  src="https://f.top4top.io/m_29124jqvd0.mov" type="video/mp4">
 
                   <div class="product-actions">
                     <button class="product-card-menu">
