--- a/signup.html
+++ b/signup.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-      <img src="https://i.top4top.io/p_2582hbajv1.png">
+      <img src="https://f.top4top.io/s_2912xwwoq0.png">
     <div class="signup_div">
         <h3>SignUp</h3>
         <input type="email" id="signup_email_field" placeholder="Enter Your Email Address ..." required />
