--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@ padding:20%;
     </style>
 <h1>About-vip-page</h1>
 
-<img src="https://i.top4top.io/p_2582hbajv1.png" ></img>
+<img src="https://d.top4top.io/p_291315egl1.png" ></img>
 <p>Non-free paid section with many tools, code and more </p>
 <p>It also includes Instagram loopholes </p>
 
@@ -41,7 +41,7 @@ padding:20%;
 <h2>Beweble Team</h2>
 <br>
 			<br>
-<footer>&copy Gitwb 2023</footer>
+<footer>&copy Beweble 2024</footer>
       </script>
    </body>
 </html>
