change-password.html

--- a/change-password.html
+++ b/change-password.html
@@ -181,7 +181,7 @@ label {
       <section class="container reset-container">
           <fieldset>
             <div>
-              <img src="https://i.top4top.io/p_2582hbajv1.png">
+              <img src="https://f.top4top.io/s_2912xwwoq0.png">
         <title></title>
         <script src="auth.js"></script>
     </head>
