--- a/store.html
+++ b/store.html
@@ -436,13 +436,22 @@ border: 1px solid #FFD36A;
         <hr>
         <h4 class="product-price">8$</h4>
         <div class="product-details">
-          <span class="product-discount">save 3$</span>
-          <span class="product-rrp">was 8$</span>
+          <span class="product-discount">save 2$</span>
+          <span class="product-rrp">was 10$</span>
         </div>
         <span class="product-stock"><i class="fas fa-info"></i>💎 1.5k => 2$💰
 💎 2.5k => 4$ 💰
 💎 5k   => 6$ 💰
-💎 10k => 8$ 💰</span>
+💎 10k => 8$ 💰
+💎 15k  => 12$💰
+💎 20k  => 14$💰
+💎 25k  => 17$ 💰
+💎 30k  => 20$💰
+💎 35k  => 23$ 💰
+💎 40k  => 26$ 💰
+💎 45k  => 29$ 💰
+💎 50k   => 32$ 💰
+</span>
       </div>
       <div class="panel-footer">
         <a href="https://wa.me/96181112046?text=Hello%20I%20want%20to%20increase%20Instagram%20followers%20%0A%D9%85%D8%B1%D8%AD%D8%A8%D8%A7%20%D8%A7%D8%B1%D9%8A%D8%AF%20%D8%B2%D9%8A%D8%A7%D8%AF%D8%A9%20%D9%85%D8%AA%D8%A7%D8%A8%D8%B9%D9%8A%D9%86%20%D8%A7%D9%86%D8%B3%D8%AA%D8%BA%D8%B1%D8%A7%D9%85" class="btn btn-block btn-1">Order now</a>
