--- a/store.html
+++ b/store.html
@@ -434,7 +434,7 @@ border: 1px solid #FFD36A;
       <div class="panel-body">
         <h4 class="product-title">Instagram followers </h4>
         <hr>
-        <h4 class="product-price">8$</h4>
+        <h4 class="product-price">10k -> 8$</h4>
         <div class="product-details">
           <span class="product-discount">save 2$</span>
           <span class="product-rrp">was 10$</span>
