--- a/store.html
+++ b/store.html
@@ -468,6 +468,7 @@ border: 1px solid #FFD36A;
         <hr>
         <h4 class="product-price">15$</h4>
         <span class="product-stock"><i class="fas fa-info"></i>monthly </span>
+	          <span class="product-stock"><i class="fas fa-ban"></i>This service not aviable </span>
       </div>
       <div class="panel-footer">
         <span href="#" class="btn btn-block btn-1">Subscribe</span>
