--- a/store.html
+++ b/store.html
@@ -381,7 +381,7 @@ border: 1px solid #FFD36A;
         <hr>
         <h4 class="product-price">10$</h4>
         <span class="product-stock"><i class="fas fa-info"></i>monthly</span>
-	         <span style="color:#ffffff;"class="product-stock"><i style="color:red;"class="fas fa-ban"></i>This service not available </span>
+	         <span style="color:red;"class="product-stock"><i style="color:red;"class="fas fa-ban"></i>This service not available </span>
       </div>
       <div class="panel-footer">
         <a href="https://wa.me/96181112046?text=Hello%20I%20want%20to%20subscribe%20to%20the%20reporting%20bot%0A%D9%85%D8%B1%D8%AD%D8%A8%D8%A7%20%D8%A7%D8%B1%D9%8A%D8%AF%20%D8%A7%D9%84%D8%A7%D8%B4%D8%AA%D8%B1%D8%A7%D9%83%20%D9%81%D9%8A%20%D8%A8%D9%88%D8%AA%20%D8%A7%D9%84%D8%A8%D9%84%D8%A7%D8%BA%D8%A7%D8%AA " class="btn btn-block btn-1">Subscribe </a>
@@ -404,7 +404,7 @@ border: 1px solid #FFD36A;
           <span class="product-rrp">was 6$</span>
         </div>
         <span class="product-stock"><i class="fas fa-info"></i>Every 10k --> 4$</span>
-	          <span style="color:#ffffff;"class="product-stock"><i style="color:green;"class="fas fa-check"></i>This service available </span>
+	          <span style="color:green;"class="product-stock"><i style="color:green;"class="fas fa-check"></i>This service available </span>
       </div>
       <div class="panel-footer">
         <a href="https://wa.me/96181112046?text=Hello%20I%20want%20to%20increase%20Instagram%20likes%0A%D9%85%D8%B1%D8%AD%D8%A8%D8%A7%20%D8%A7%D8%B1%D9%8A%D8%AF%20%D8%B2%D9%8A%D8%A7%D8%AF%D8%A9%20%D9%84%D8%A7%D9%8A%D9%83%D8%A7%D8%AA%20%D8%A7%D9%86%D8%B3%D8%AA%D8%BA%D8%B1%D8%A7%D9%85" class="btn btn-block btn-1">Order now</a>
