--- a/store.html
+++ b/store.html
@@ -420,6 +420,7 @@ border: 1px solid #FFD36A;
         <hr>
         <h4 class="product-price">25$</h4>
         <span class="product-stock"><i class="fas fa-info"></i>10k -->25$</span>
+	          <span style="color:green;"class="product-stock"><i style="color:green;"class="fas fa-ban"></i>This service available </span>
       </div>
       <div class="panel-footer">
         <a href="https://wa.me/96181112046?text=Hello%20I%20want%20to%20increase%20telegram%20followers%20%0A%D9%85%D8%B1%D8%AD%D8%A8%D8%A7%20%D8%A7%D8%B1%D9%8A%D8%AF%20%D8%B2%D9%8A%D8%A7%D8%AF%D8%A9%20%D9%85%D8%AA%D8%A7%D8%A8%D8%B9%D9%8A%D9%86%20%D8%AA%D9%84%D8%AC%D8%B1%D8%A7%D9%85" class="btn btn-block btn-1">Order now</a>
@@ -454,7 +455,7 @@ border: 1px solid #FFD36A;
 💎 45k  => 29$ 💰
 💎 50k   => 32$ 💰
 </span>
-	          <span style="color:#ffffff;"class="product-stock"><i style="color:green;"class="fas fa-check"></i>This service available </span>
+	          <span style="color:green;"class="product-stock"><i style="color:green;"class="fas fa-check"></i>This service available </span>
       </div>
       <div class="panel-footer">
         <a href="https://wa.me/96181112046?text=Hello%20I%20want%20to%20increase%20Instagram%20followers%20%0A%D9%85%D8%B1%D8%AD%D8%A8%D8%A7%20%D8%A7%D8%B1%D9%8A%D8%AF%20%D8%B2%D9%8A%D8%A7%D8%AF%D8%A9%20%D9%85%D8%AA%D8%A7%D8%A8%D8%B9%D9%8A%D9%86%20%D8%A7%D9%86%D8%B3%D8%AA%D8%BA%D8%B1%D8%A7%D9%85" class="btn btn-block btn-1">Order now</a>
@@ -471,7 +472,7 @@ border: 1px solid #FFD36A;
         <hr>
         <h4 class="product-price">15$</h4>
         <span class="product-stock"><i class="fas fa-info"></i>monthly </span>
-	          <span style="color:#ffffff;"class="product-stock"><i style="color:red;"class="fas fa-ban"></i>This service not available </span>
+	          <span style="color:red;"class="product-stock"><i style="color:red;"class="fas fa-ban"></i>This service not available </span>
       </div>
       <div class="panel-footer">
         <span href="#" class="btn btn-block btn-1">Subscribe</span>
