insta-f-store.html

--- a/insta-f-store.html
+++ b/insta-f-store.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Document</title>
+<title>insta followers store</title>
 <style>
 /* @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap'); */
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100&display=swap");
@@ -16,7 +16,7 @@
 body{
     font-famil;
     color:#ffd36a;
-    background:#121212;
+    background-color: #121212 !important;
 }
 /* copy from here for the navbar */
 header {
@@ -346,7 +346,7 @@ img{
 }
 .price{
     float: right; 
-    color: #fff;
+    color:red;
     background:#000;
     border-radius: 5px;
     border: 1px solid #ffd36a;
@@ -873,7 +873,10 @@ h3{
     opacity: 0;
   }
 }
-
+p {
+  color:#fff;
+}
+}
 </style>
 </head>
 <body>
@@ -909,7 +912,7 @@ h3{
                           <div class="products_row">
                           	
                 <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-                <a href="index">
+                <a href="store">
         	 <h3 style="margin:5px;font-size:25px;"class="bx bx-arrow-back" ></h3>
         </a>
                 <div class="products_column" id="img1">
