social-media-services.html

--- a/social-media-services.html
+++ b/social-media-services.html
@@ -433,7 +433,21 @@ border: 1px solid #FFD36A;
           <span class="product-discount">save 2$</span>
           <span class="product-rrp">was 10$</span>
         </div>
-        <span class="product-stock"><i class="fas fa-info"></i>Every 10k --> 5$</span>
+        <span class="product-stock"><i class="fas fa-info"></i>💎 1.5k => 2$💰
+💎 2.5k => 4$ 💰
+💎 5k   => 6$ 💰
+💎 10k => 8$ 💰
+💎 15k  => 12$💰
+💎 20k  => 14$💰
+💎 25k  => 17$ 💰
+💎 30k  => 20$💰
+💎 35k  => 23$ 💰
+💎 40k  => 26$ 💰
+💎 45k  => 29$ 💰
+💎 50k   => 32$ 💰
+</span>
+	          <span style="color:green;"class="product-stock"><i style="color:green;"class="fas fa-check"></i>This service available </span>
+      </div>
       </div>
       <div class="panel-footer">
         <a href="product-payment" class="btn btn-block btn-1">Order now</a>
