social-media-services.html

--- a/social-media-services.html
+++ b/social-media-services.html
@@ -381,6 +381,7 @@ border: 1px solid #FFD36A;
         <hr>
         <h4 class="product-price">10$</h4>
         <span class="product-stock"><i class="fas fa-info"></i>monthly </span>
+	           <span style="color:green;"class="product-stock"><i style="color:red;"class="fas fa-bar"></i>This service not available </span>
       </div>
       <div class="panel-footer">
         <a href="product-payment" class="btn btn-block btn-1">order now </a>
@@ -400,6 +401,7 @@ border: 1px solid #FFD36A;
           <span class="product-rrp">was 6$</span>
         </div>
         <span class="product-stock"><i class="fas fa-info"></i>Every 10k --> 4$</span>
+	           <span style="color:green;"class="product-stock"><i style="color:green;"class="fas fa-check"></i>This service available </span>
       </div>
       <div class="panel-footer">
         <a href="product-payment" class="btn btn-block btn-1">Order now</a>
@@ -415,6 +417,7 @@ border: 1px solid #FFD36A;
         <hr>
         <h4 class="product-price">25$</h4>
         <span class="product-stock"><i class="fas fa-info"></i>10k -->25$</span>
+	           <span style="color:green;"class="product-stock"><i style="color:green;"class="fas fa-check"></i>This service available </span>
       </div>
       <div class="panel-footer">
         <a href="product-payment" class="btn btn-block btn-1">Order now</a>
