social-media-services.html

--- a/social-media-services.html
+++ b/social-media-services.html
@@ -453,7 +453,7 @@ border: 1px solid #FFD36A;
       
       </div>
       <div class="panel-footer">
-        <a href="product-payment" class="btn btn-block btn-1">Order now</a>
+        <a href="insta-f-store" class="btn btn-block btn-1">Order now</a>
       </div>
     </div>
     </a>
