social-media-services.html

--- a/social-media-services.html
+++ b/social-media-services.html
@@ -381,7 +381,7 @@ border: 1px solid #FFD36A;
         <hr>
         <h4 class="product-price">10$</h4>
         <span class="product-stock"><i class="fas fa-info"></i>monthly </span>
-	           <span style="color:green;"class="product-stock"><i style="color:red;"class="fas fa-bar"></i>This service not available </span>
+	           <span style="color:red;"class="product-stock"><i style="color:red;"class="fas fa-ban"></i>This service not available </span>
       </div>
       <div class="panel-footer">
         <a href="product-payment" class="btn btn-block btn-1">order now </a>
