insta-f-store.html

--- a/insta-f-store.html
+++ b/insta-f-store.html
@@ -1033,7 +1033,7 @@ p {
 
     <textarea name="mensagem" placeholder="Leave a message"></textarea>
 
-    <button type="submit">Buy now </button> </button>
+    <button type="submit"> Submit request </button> </button>
   </fieldset>
 </form>
 <!-- partial -->
