--- a/store.html
+++ b/store.html
@@ -407,7 +407,7 @@ border: 1px solid #FFD36A;
 	          <span style="color:green;"class="product-stock"><i style="color:green;"class="fas fa-check"></i>This service available </span>
       </div>
       <div class="panel-footer">
-        <a href="https://wa.me/96181112046?text=Hello%20I%20want%20to%20increase%20Instagram%20likes%0A%D9%85%D8%B1%D8%AD%D8%A8%D8%A7%20%D8%A7%D8%B1%D9%8A%D8%AF%20%D8%B2%D9%8A%D8%A7%D8%AF%D8%A9%20%D9%84%D8%A7%D9%8A%D9%83%D8%A7%D8%AA%20%D8%A7%D9%86%D8%B3%D8%AA%D8%BA%D8%B1%D8%A7%D9%85" class="btn btn-block btn-1">Order now</a>
+        <a href="likes-insta-store" class="btn btn-block btn-1">Order now</a>
       </div>
     </div>
     <div class="panel panel-type-new">
