likes-insta-store.html

--- a/likes-insta-store.html
+++ b/likes-insta-store.html
@@ -1060,7 +1060,7 @@ p {
                     <div class="phone_img">
                       <i class="fa fa-shopping-cart cart" id="shopping-cart1" style="font-size: 24px"></i>
                       <i class="fa fa-heart wish" style="font-size: 24px" id="heart1"></i>
-                        <a href="likes-insta-store" >
+                        <a href="insta-f-store" >
                       <img src="https://b.top4top.io/p_2494fd9v61.jpg"  style="width:260px;height:150px">     
                       </a>
                     </div>
