server-services.html

--- a/server-services.html
+++ b/server-services.html
@@ -386,7 +386,7 @@ border: 1px solid #FFD36A;
         <span class="product-stock"><i class="fas fa-info"></i>monthly </span>
       </div>
       <div class="panel-footer">
-        <span href="product-paymentt" class="btn btn-block btn-1">Order now</span>
+        <span href="product-paymentt" class="btn btn-block btn-1">subscribe</span>
       </div>
     </a>
   </div>
