social-media-services.html

--- a/social-media-services.html
+++ b/social-media-services.html
@@ -384,7 +384,7 @@ border: 1px solid #FFD36A;
 	           <span style="color:red;"class="product-stock"><i style="color:red;"class="fas fa-ban"></i>This service not available </span>
       </div>
       <div class="panel-footer">
-        <a href="product-payment" class="btn btn-block btn-1">order now </a>
+        <a href="product-payment" class="btn btn-block btn-1">subscribe</a>
       </div>
     </div>
     <div class="panel panel-type-sale">
@@ -404,7 +404,7 @@ border: 1px solid #FFD36A;
 	           <span style="color:green;"class="product-stock"><i style="color:green;"class="fas fa-check"></i>This service available </span>
       </div>
       <div class="panel-footer">
-        <a href="product-payment" class="btn btn-block btn-1">Order now</a>
+        <a href="likes-insta-store" class="btn btn-block btn-1">Order now</a>
       </div>
     </div>
     <div class="panel panel-type-new">
