--- a/index.html
+++ b/index.html
@@ -1524,7 +1524,7 @@ video{
 
                 <figure class="product-banner">
 
-                  <img src="https://i.top4top.io/p_2640t44w41.jpg" alt="">
+                  <img src="https://k.top4top.io/p_2936du5oh0.jpeg" alt="">
 
                   <div class="product-actions">
                     <button class="product-card-menu">
