--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><meta charset="UTF-8">
+<head><meta name="google-site-verification" content="1DUfdgl7qhYoBbzNILo6fUiqEKFppElAd19yvWNTN3o" /><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>home</title>
    <body>
