--- a/Lolo.html
+++ b/Lolo.html
@@ -18,11 +18,11 @@
   position:relative;
   top:0;
   left:0;
-  width:1000px;
-  height:2000px;
+  width:100%;
+  height:100%;
  overflow:hidden;
   background-image:url("https://i.pinimg.com/originals/51/d8/37/51d8374126446d495348b6032202126f.jpg");
-  background-size:1000px 1000px;
+  background-size:100% 100%;
   z-index:-1;
 }
 
