--- a/Lolo.html
+++ b/Lolo.html
@@ -18,8 +18,8 @@
   position:relative;
   top:0;
   left:0;
-  width:100%;
-  height:100%;
+  width:1000px;
+  height:1000px;
  overflow:hidden;
   background-image:url("https://i.pinimg.com/originals/51/d8/37/51d8374126446d495348b6032202126f.jpg");
   background-size:100% 100%;
@@ -134,7 +134,7 @@ var love = setInterval(function(){
 
 var i = 0;
 var txt1 = "olo y aaumre btmma t2re kel she.....!  <<              zkrytna sawa khbyta be mtr7 fe amen rah etrkon l2nu aande emen be alla kber rah nrjaa mtl abl w ahsan <<<              hadol zkryt trkton hta nrjaa nshufon sawa kel she mohdset sowar video.!                                                                           > elna rah khbehon waad <<                  rah gheb ftra asere aanik hyda she ma byaane enu btlt hbek! <<                            ente be albe w ruhe w dyman bker feke bde yeke trtehe hal ftra w tfkre be klmete > nhna ma lzem nkhsr baad dyman tzkrene.bde bss tsmaae esme tedhke wtetzkre ade rida ken ykhaf aalyke m2kd rah nrjaa lbaad l2nu aamlt khere bss bda sabr w nfhm aabad m2kd.!                     << l2nu ana w ente mnshbh baad be kel she tjaalkna bhytna n2zyna nfs she bss w rah olik kol she sar maae w ente baaede eshkelik aala ahle w dene.!                                                     > w ente tedhke w ana edhk maaek w2t rhte sret sh8let kter aazbtne w bktne whta mwttne trke kl le bthke maaon wtaae nhke w nshar mtl ma kna              << w ser ana ne2 w ente taasbe aalye wndal nhke w nhke lhta nghfa mtl kel mara khlene efrh feke bss hal mara khlina baaref hay msheaaer                                               >bss sd2ene rah thbene w rah tkone kter mrteha btaarfe ente rida w kef bfker btaarfe rida ken ydalo y2lek baatzer aala eshya ente w la howe ken yaaref <le yaatzer aalyha le l2nu bkhaf kon mzaalek bshe w msh mntbeh ana jehez la yale bdek yeh khde w2tek fkre mneh.....! |                  <<<< bhbiik w rah dal hbiiik ente zghturte l2mura w fassaunte lhelwe w ana m2kd rah taatene chance to Prove my Love ...!";
-var speed = 100;
+var speed = 150;
 typeWriter();
 function typeWriter() {
   if (i < txt1.length) {        
