--- a/Truerasemotivate.html
+++ b/Truerasemotivate.html
@@ -162,7 +162,7 @@
   </div>
 
   <footer>
-    &copy; 2025 All rights reserved | Powered by <a href="https://beweble.com" target="_blank">Beweble</a>
+    &copy; 2025 All rights reserved | Powered by <a href="https://redaccx.github.io/beweble" target="_blank">Beweble</a>
   </footer>
 
   <script>
